changed the design of the ui for the login page, register page, and the navbar

--- a/src/pages/Form.css
+++ b/src/pages/Form.css
@@ -6,9 +6,10 @@
     align-items: center;
     justify-content: center;
     font-family: Inter, sans-serif;
-    color: black;
+    color: white;
     background: var(--gradient-color);
 }
+
 .form-container {
     width: var(--card-width);
     height: var(--card-height);
@@ -16,11 +17,10 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    background: #ffffff;
-    border-radius: 10px;
-    box-shadow: 0 0px 20px -4px rgba(255, 255, 255, 1);
+    background: rgba(255, 255, 255, 0.05);
+    border-radius: 16px;
+    box-shadow: 0 0 20px violet;
     text-align: center;
-    /*gap: 2rem;*/
     border: 1px solid violet;
 
 }
@@ -46,7 +46,7 @@
     margin-bottom: 5px;
     display: block;
     font-weight: bold;
-    color: #555;
+    color: white;
     text-align: left;
 }
 .form-input{
@@ -71,6 +71,7 @@
     appearance: none;
     width: 13vw;
 }
+
 #submit-button{
     width: 13vw;
     height: 40px;
@@ -94,25 +95,31 @@
     border: none;
     cursor: pointer;
     text-align: right;
+    color: white;
 }
 #submit-button.active {
-    background: var(--gradient-color-bright);
-    color: aliceblue;
+    cursor: pointer;
+    color: white;
+    background: linear-gradient(var(--gradient-angle), var(--color-1), var(--color-2), var(--color-3));
+    transition: --color-1 1s, --color-2 1s, --color-3 1s;
 }
 
 #submit-button:disabled {
-    background-color: #ccc;
+    background: #ccc;
     cursor: default;
 }
 
-#submit-button:hover:not(:disabled) {
-    background: var(--gradient-color-dark);
+#submit-button.active:hover{
+    --color-1: var(--color-1-bright);
+    --color-2: var(--color-2-bright);
+    --color-3: var(--color-3-bright);
 }
 .have-an-account{
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    gap: 0.4rem;
 }
 .have-an-account-button{
     background: transparent;
@@ -120,6 +127,7 @@
     cursor: pointer;
     font-size: 1rem;
     font-weight: bold;
+    color: white;
 }
 
 .right-side{
@@ -130,12 +138,14 @@
     gap: 3rem;
     width: 55%;
     height: 100%;
+    border-radius: 16px;
 
 }
 .left-side{
     width: 45%;
     height: 100%;
     background: var(--gradient-color);
+    border-radius: 16px;
 }
 .image-container{
     width: 100%;
