--- a/src/App.css
+++ b/src/App.css
@@ -2,24 +2,28 @@
   font-family: Inter, sans-serif;
   font-feature-settings: 'liga' 1, 'calt' 1; /* fix for Chrome */
 }
-.App{
-  background-color: rgba(255, 248, 241, 0.55);
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+.App>{
+
 }
-.Page{
+.App{
+  background-color: rgba(241, 229, 255, 0.28);
+
   width: 100vw;
   height: 100vh;
   display: flex;
   flex-direction: column;
   /*align-items: center;*/
   /*justify-content: center;*/
-
 }
-.Button{
+/*.Page{*/
+/*  width: 100vw;*/
+/*  height: 100vh;*/
+/*  display: flex;*/
+/*  flex-direction: column;*/
+/*  !*align-items: center;*!*/
+/*  !*justify-content: center;*!*/
 
-}
+/*}*/
+/*.Button{*/
+
+/*}*/
