--- a/src/index.css
+++ b/src/index.css
@@ -1,47 +1,64 @@
 :root {
-  --gradient-color: linear-gradient(129deg, rgba(49,9,121,1) 17%, rgba(55,1,77,1) 59%, rgba(101,0,120,1) 100%);
-  --gradient-color-bright: linear-gradient(129deg, rgb(67, 12, 173) 17%, rgb(114, 0, 159) 59%, rgb(179, 3, 217) 100%);
-  --gradient-color-dark:linear-gradient(129deg, rgba(49,9,121,1) 17%, rgba(55,1,77,1) 59%, rgba(101,0,120,1) 100%);
+  /*--gradient-color: linear-gradient(var(--gradient-angle), rgba(49,9,121,1) 17%, rgba(55,1,77,1) 59%, rgba(101,0,120,1) 100%);*/
+  --gradient-angle: 129deg;
+  /*--color-1: #641435;*/
+  /*--color-2: #B71734;*/
+  /*--color-3: #ED1520;*/
+  /*--color-4: #FB5A20;*/
+  /*--color-5: #FCC730;*/
+  --gradient-color: linear-gradient(var(--gradient-angle), var(--color-1) 10%, var(--color-2) 50%, var(--color-3) 90%);
+
+  --color-1-bright: rgb(88, 0, 255);
+  --color-2-bright: rgb(183, 0, 255);
+  --color-3-bright: rgb(210, 0, 255);
+  --color-1: rgb(66, 11, 169);
+  --color-2: rgb(81, 1, 113);
+  --color-3: rgb(70, 1, 98);
   --card-width: 60vw;
   --card-height: 70vh;
-
 }
-/*button:hover {*/
-/*  border-color: #490a9d;*/
-/*}*/
-/*button:focus,button:focus-visible {*/
-/*  outline: 90px auto -webkit-focus-ring-color;*/
-/*}*/
-.dashboard{
-  height: 100%;
-  width: 100%;
+@property --color-1{
+  syntax: "<color>";
+  initial-value: transparent;
+  inherits: true;
+}
+@property --color-2{
+  syntax: "<color>";
+  initial-value: transparent;
+  inherits: true;
+}
+@property --color-3{
+  syntax: "<color>";
+  initial-value: transparent;
+  inherits: true;
+}
 
+body {
+  display: flex;
+  margin: 0;
+}
+
+.dashboard{
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  border-radius: 20px;
+  box-shadow: 0 2px 5px rgb(255, 255, 255);
+}
+
+.upper-container {
+  width: 100vw;
+  height: 50vh;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   text-align: center;
-
-  /*border-radius: 20px;*/
-  /*box-shadow: 0 2px 5px rgb(255, 255, 255);*/
-}
-
-.navbar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 80px;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
-  text-align: center;
-
   background: var(--gradient-color);
   color: white;
-  box-shadow: -1px 3px 13px 0px rgba(83,45,117,1);
+  box-shadow: -1px 3px 13px 0 rgba(83,45,117,1);
   border-radius: 5px;
 }
 .Logo{
@@ -49,7 +66,26 @@
   width: 50px;
   height: 50px;
 }
+.search{
+  height: 80%;
+  width: 100%;
+  /*border: 8px solid white;*/
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 40px;
 
+}
+.navbar{
+  width: 100%;
+  height: 20%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+}
 .navbar ul {
   display: flex;
   flex-direction: row;
@@ -57,7 +93,8 @@
   align-items: center;
   text-align: center;
   gap: 20px;
-
+  padding: 0;
+  margin: 0;
   list-style-type: none;
   font-family: Inter, sans-serif;
   font-weight: bold;
@@ -69,7 +106,6 @@
 
 }
 .navbar a:hover {
-  /*transition: border-bottom-color 0.3s;*/
   border-bottom: 2px solid white;
   animation: border-bottom-animation 0.3s;
 }
@@ -119,44 +155,38 @@
 
 
 
-body {
-  display: flex;
-  margin: 0;
-  padding-top: 50px;
-}
-
-.history{
-  display: inline-flex;
-  margin-left:480px;
-  margin-top: 60px;
-  padding: 20px;
-  background-color: #242424;
-  color: white;
-  border: 3px solid #007BFF;
-  border-radius: 20px;
-}
-.search-bar{
-  margin-right: 10px;
-}
-.navCourses {
-  display: inherit;
-  justify-content: flex-start;
-  align-items: center;
-  background-color: #1e1f22;
-  padding: 20px;
-  margin-left: 10px;
-  flex: 1;
-  position: absolute;
-  margin-top: 60px;
-  max-width: 30%;
-  width: 30%;
-  border: 3px solid #007BFF;
-  border-radius: 20px;
-  box-sizing: content-box;
-}
-.search-courses{
-  width: 90%;
-  padding: 10px;
-  margin-right:10px;
-}
+/*.history{*/
+/*  display: inline-flex;*/
+/*  margin-left:480px;*/
+/*  margin-top: 60px;*/
+/*  padding: 20px;*/
+/*  background-color: #242424;*/
+/*  color: white;*/
+/*  border: 3px solid #007BFF;*/
+/*  border-radius: 20px;*/
+/*}*/
+/*.search-bar{*/
+/*  margin-right: 10px;*/
+/*}*/
+/*.navCourses {*/
+/*  display: inherit;*/
+/*  justify-content: flex-start;*/
+/*  align-items: center;*/
+/*  background-color: #1e1f22;*/
+/*  padding: 20px;*/
+/*  margin-left: 10px;*/
+/*  !*flex: 1;*!*/
+/*  !*position: absolute;*!*/
+/*  !*margin-top: 60px;*!*/
+/*  max-width: 30%;*/
+/*  width: 30%;*/
+/*  border: 3px solid #007BFF;*/
+/*  border-radius: 20px;*/
+/*  box-sizing: content-box;*/
+/*}*/
+/*.search-courses{*/
+/*  width: 90%;*/
+/*  padding: 10px;*/
+/*  margin-right:10px;*/
+/*}*/
 
