--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,8 @@
 }
 
 .logo {
+  font-family: "Times New Roman", Georgia, serif; /* Classic serif fonts */
+
   height: 6em;
   padding: 1.5em;
   will-change: filter;
