--- a/src/index.css
+++ b/src/index.css
@@ -30,17 +30,6 @@ body {
     display: flex;
     margin: 0;
 }
-
-.dashboard{
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    border-radius: 20px;
-    box-shadow: 0 2px 5px rgb(255, 255, 255);
-}
-
 .upper-container {
     width: 100vw;
     height: 50vh;
@@ -70,38 +59,8 @@ body {
     gap: 40px;
 
 }
-.navbar{
-    width: 100%;
-    height: 20%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
 
-}
-.navbar ul {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    gap: 20px;
-    padding: 0;
-    margin: 0;
-    list-style-type: none;
-    font-family: Inter, sans-serif;
-    font-weight: bold;
-    font-size: 1.5rem;
-}
-.navbar a {
-    color: white;
-    text-decoration: none;
-
-}
-.navbar a:hover {
-    border-bottom: 2px solid white;
-    animation: border-bottom-animation 0.3s;
-}
+.
 @keyframes border-bottom-animation {
     from {
         border-bottom-color: transparent;
@@ -110,76 +69,6 @@ body {
         border-bottom-color: white;
     }
 }
-.navbar li:first-child{
-    position: absolute;
-    left: 10%;
-    float: none;
-}
-.navbar li:nth-child(2){
-    position: absolute;
-    left: 13.5%;
-    float: none;
-}
-.navbar li:nth-child(6){
-    position: absolute;
-    right: 17%;
-    float: none;
-}
-.navbar li:last-child{
-    position: absolute;
-    right: 10%;
-    float: none;
-}
-
-/*.search-bar{*/
-/*  padding: 8px;                         !* Inner padding for input *!*/
-/*  border: 1px solid #ccc;               !* Border for the input *!*/
-/*  border-radius: 4px;                   !* Rounded corners for the input *!*/
-/*  margin-right: 10px;*/
-/*}*/
-/*.search-button{*/
-/*  !*padding: 8px 12px;                    !* Inner padding for the button *!*!*/
-/*  background-color: transparent;               !* Button background color *!*/
-/*  border: 1px solid white;                         !* No border *!*/
-/*  border-radius: 4px;                   !* Rounded corners for the button *!*/
-/*  color: white;                         !* Text color for the button *!*/
-/*  cursor: pointer;*/
-/*}*/
 
 
-
-/*.history{*/
-/*  display: inline-flex;*/
-/*  margin-left:480px;*/
-/*  margin-top: 60px;*/
-/*  padding: 20px;*/
-/*  background-color: #242424;*/
-/*  color: white;*/
-/*  border: 3px solid #007BFF;*/
-/*  border-radius: 20px;*/
-/*}*/
-/*.search-bar{*/
-/*  margin-right: 10px;*/
-/*}*/
-/*.navCourses {*/
-/*  display: inherit;*/
-/*  justify-content: flex-start;*/
-/*  align-items: center;*/
-/*  background-color: #1e1f22;*/
-/*  padding: 20px;*/
-/*  margin-left: 10px;*/
-/*  !*flex: 1;*!*/
-/*  !*position: absolute;*!*/
-/*  !*margin-top: 60px;*!*/
-/*  max-width: 30%;*/
-/*  width: 30%;*/
-/*  border: 3px solid #007BFF;*/
-/*  border-radius: 20px;*/
-/*  box-sizing: content-box;*/
-/*}*/
-/*.search-courses{*/
-/*  width: 90%;*/
-/*  padding: 10px;*/
-/*  margin-right:10px;*/
-/*}*/
 
