--- a/src/pages/Course.css
+++ b/src/pages/Course.css
@@ -1,3 +1,31 @@
+.course-card-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    color: black;
+    gap: 3rem;
+    border: 1px solid black;
+    width: 100%;
+    height: 50vh;
+}
+.course-card{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /*align-items: center;*/
+    /*padding: 50px;*/
+    /*margin: 30px;*/
+    text-align: left;
+    border: 1px solid white;
+    background: white;
+    width: 20vw;
+    height: 30vh;
+
+    border-radius: 10px;
+    box-shadow: 0 0 10px white;
+
+}
 .AddCourse {
     display: flex;
     flex-direction: column;
