--- a/src/pages/Dashboard.css
+++ b/src/pages/Dashboard.css
@@ -1,96 +1,35 @@
 .dashboard{
-    height: 100vh;
     width: 100vw;
-    display: inline-flex;
-    flex-direction: row;
+    display: flex;
+    flex-direction: column;
     text-align: center;
-    border-radius: 20px;
-    box-shadow: 0 2px 5px rgb(255, 255, 255);
-    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+    align-items: center;
+    justify-content: center;
     font-weight: 600;
-    -webkit-text-fill-color: white;
-    color-scheme: dark light;
-    cursor: pointer;
-    color: white;
+    /*cursor: poi.nter;*/
+    /*color: black;*/
 }
+
+.upper-container {
+    width: 100vw;
+    height: 30vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: 15rem;
+    background: var(--gradient-color);
+    color: white;
+    /*box-shadow: -1px 3px 13px 0 rgba(83,45,117,1);*/
+    border-radius: 5px;
+}
+
 .search-courses{
   padding: 10px;
   margin-right:10px;
 }
-.navbar{
-    width: 80%;
-    height: 10%;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-.navbar ul {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    gap: 6rem;
-    padding: 0;
-    margin: 0;
-    list-style-type: none;
-    font-family: Inter, sans-serif;
-    font-weight: bold;
-    font-size: 1.5rem;
-}
-.navbar a {
-    color: white;
-    text-decoration: none;
 
-}
-.navbar a:hover {
-    border-bottom: 2px solid #ffffff;
-    animation: border-bottom-animation 0.3s;
-}
-/*.navbar li:first-child{*/
-/*    position: absolute;*/
-/*    left: 10%;*/
-/*    float: none;*/
-/*}*/
-/*.navbar li:nth-child(2){*/
-/*    position: absolute;*/
-/*    left: 13.5%;*/
-/*    float: none;*/
-/*}*/
-/*.navbar li:nth-child(6){*/
-/*    position: absolute;*/
-/*    right: 17%;*/
-/*    float: none;*/
-/*}*/
-.navbar li:last-child{
-    position: absolute;
-    right: 10%;
-    float: none;
-}
-.navbar li{
-}
-.search-bar{
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    margin-right: 10px;
-}
-.search-button{
-    padding: 8px 12px;
-    background-color: transparent;
-    border: 1px solid white;
-    border-radius: 4px;
-    color: white;
-    cursor: pointer;
-}
-
-
-body {
-    display: flex;
-    margin-top: 2rem;
-    background: linear-gradient(var(--gradient-angle), var(--color-1), var(--color-2), var(--color-3));
-    transition: --color-1 1s, --color-2 1s, --color-3 1s;
-}
 
 button:hover {
     border-color: #490a9d;
