--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
 :root {
+    --background-color: rebeccapurple;
     --gradient-angle: 129deg;
-    --color-1: rgb(66, 11, 169);
-    --color-2: rgb(81, 1, 113);
-    --color-3: rgb(70, 1, 98);
+    --color-1: rgb(72, 11, 169);
+    --color-2: rebeccapurple;
+    --color-3: rgb(128, 0, 153);
     --gradient-color: linear-gradient(var(--gradient-angle), var(--color-1) 10%, var(--color-2) 50%, var(--color-3) 90%);
     --color-1-bright: rgb(88, 0, 255);
     --color-2-bright: rgb(183, 0, 255);
