--- a/src/pages/NavBar.css
+++ b/src/pages/NavBar.css
@@ -9,10 +9,7 @@
     text-align: center;
 
     color: white;
-    background-color: rebeccapurple;;
-
-    border-radius: 5px;
-    /*box-shadow: 0 0 20px rebeccapurple;*/
+    background-color: var(--background-color);;
 }
 
 .navbar ul {
