--- a/src/pages/Course.css
+++ b/src/pages/Course.css
@@ -10,22 +10,27 @@
     height: 50vh;
 }
 .course-card{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    /*align-items: center;*/
-    /*padding: 50px;*/
-    /*margin: 30px;*/
-    text-align: left;
-    border: 1px solid white;
-    background: white;
     width: 20vw;
     height: 30vh;
 
-    border-radius: 10px;
-    box-shadow: 0 0 10px white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: left;
+
+    border: 3px solid rebeccapurple;
+    /*background: white;*/
+    border-radius: 30px;
+    box-shadow: 0 0 3px rebeccapurple;
+    transition: all 0.5s ease;
+    cursor: pointer;
 
 }
+.course-card:hover{
+    transform: scale(1.1);
+    box-shadow: 0 0 30px rebeccapurple;
+}
+
 .AddCourse {
     display: flex;
     flex-direction: column;
