--- a/src/pages/Course.css
+++ b/src/pages/Course.css
@@ -1,3 +1,4 @@
+
 .course-card-container{
     display: flex;
     flex-direction: row;
@@ -53,4 +54,26 @@
     box-shadow: 0px 3px 4px 0px rgba(0,0,0,0.75);
 
 
+}
+.course-material {
+    display: flex; /* מאפשר שימוש ב-flexbox */
+    flex-direction: column; /* מארגן את הילדים בעמודה */
+    align-items: center; /* מרכז אופקית */
+    justify-content: center; /* מרכז אנכית */
+    text-align: center; /* טקסט באמצע */
+    margin: 0 auto; /* מוודא ריווח מרכזי */
+    font-size: 25px;
+}
+button{
+   width:8vw;
+    height: 3vh;
+    font-size: 20px;
+    background-color: white;
+    color:rebeccapurple;
+    border:1px solid rebeccapurple;
+    margin-top: 20px;
+
+}
+bold{
+    color:rebeccapurple;
 }
