--- a/src/pages/Course.css
+++ b/src/pages/Course.css
@@ -34,13 +34,13 @@
 }
 
 .AddCourse {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100vw;
-    height: 100vh;
-    border: 4px solid red;
+    display: flex; /* מאפשר שימוש ב-flexbox */
+    flex-direction: column; /* מארגן את הילדים בעמודה */
+    align-items: center; /* מרכז אופקית */
+    justify-content: center; /* מרכז אנכית */
+    text-align: center; /* טקסט באמצע */
+    margin: 0 auto; /* מוודא ריווח מרכזי */
+    font-size: 25px;
 }
 
 .AddCourse h1 {
@@ -50,7 +50,7 @@
 }
 
 .Input{
-    width: 80%;
+    width: 20%;
     box-shadow: 0px 3px 4px 0px rgba(0,0,0,0.75);
 
 
