--- a/src/pages/Course.css
+++ b/src/pages/Course.css
@@ -2,8 +2,9 @@
 .course-card-container{
     display: flex;
     flex-direction: row;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+    text-align: center;
     color: black;
     gap: 3rem;
     border: 1px solid black;
@@ -13,7 +14,6 @@
 .course-card{
     width: 20vw;
     height: 30vh;
-
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -51,6 +51,7 @@
 
 .Input{
     width: 20%;
+    height: 25px;
     box-shadow: 0px 3px 4px 0px rgba(0,0,0,0.75);
 
 
