--- a/src/pages/Course.css
+++ b/src/pages/Course.css
@@ -1,80 +1,158 @@
-
-.course-card-container{
+.courses-page{
+    width: 100vw;
+    height: 100vh;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
     text-align: center;
-    color: black;
-    gap: 3rem;
-    border: 1px solid black;
-    width: 100%;
-    height: 50vh;
 }
-.course-card{
-    width: 20vw;
-    height: 30vh;
+.course-page-header{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    text-align: left;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    height:15%;
+    font-size:3rem;
+    font-weight:bold;
+    color: white;
+    background-color: var(--background-color);
+}
+.course-card-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 60%;
+    gap: 2.5rem;
 
+}
+.course-card{
+    width: 20vw;
+    height: 40vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: left;
     border: 3px solid rebeccapurple;
-    /*background: white;*/
-    border-radius: 30px;
+    border-radius: 8px;
     box-shadow: 0 0 3px rebeccapurple;
     transition: all 0.5s ease;
     cursor: pointer;
-
+}
+.course-card-content-image{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+    height: 40%;
+}
+.course-card-content-text{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 1.5rem;
+    width: 90%;
+    height: 50%;
 }
 .course-card:hover{
-    transform: scale(1.1);
+    transform: scale(1.01);
     box-shadow: 0 0 30px rebeccapurple;
-
 }
-
-.AddCourse {
-    display: flex; /* מאפשר שימוש ב-flexbox */
-    flex-direction: column; /* מארגן את הילדים בעמודה */
-    align-items: center; /* מרכז אופקית */
-    justify-content: center; /* מרכז אנכית */
-    text-align: center; /* טקסט באמצע */
-    margin: 0 auto; /* מוודא ריווח מרכזי */
-    font-size: 25px;
+.add-new-course-container{
+    width: 100%;
+    height: 10%;
 }
+.add-new-course{
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    right: 5%;
 
-.AddCourse h1 {
+    border-radius: 100%;
+
+    background-color: var(--background-color);
+    color: white;
+    border: none;
+    box-shadow: 0 0 3px rebeccapurple;
     font-size: 3rem;
+    cursor: pointer;
+    transition: all 0.5s ease;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
-    font-weight: bold;
-}
-
-.Input{
-    width: 20%;
-    height: 25px;
-    box-shadow: 0px 3px 4px 0px rgba(0,0,0,0.75);
-
 
 }
-.course-material {
-    display: flex; /* מאפשר שימוש ב-flexbox */
-    flex-direction: column; /* מארגן את הילדים בעמודה */
-    align-items: center; /* מרכז אופקית */
-    justify-content: center; /* מרכז אנכית */
-    text-align: center; /* טקסט באמצע */
-    margin: 0 auto; /* מוודא ריווח מרכזי */
+.add-new-course:hover{
+    transform: scale(1.1);
+    box-shadow: 0 0 10px rebeccapurple;
+}
+
+.add-new-course-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    gap: 1.1rem;
+
     font-size: 25px;
-}
-button{
-   width:8vw;
-    height: 3vh;
-    font-size: 20px;
-    background-color: white;
-    color:rebeccapurple;
-    border:1px solid rebeccapurple;
-    margin-top: 20px;
+    position: absolute;
+    top: 15vw;
+    left: 25%;
+    width: 50%;
+    height: 60%;
+    backdrop-filter: blur(10px);
+    background: rgba(102, 51, 153, 0.45);
+    color: white;
+    border-radius: 10px;
+    border: 3px solid rebeccapurple;
+
+    transition: all 0.5s ease;
 
 }
-bold{
-    color:rebeccapurple;
+.add-new-course-form:active{
+    transform: scale(1.1);
 }
+
+/*.AddCourse h1 {*/
+/*    font-size: 3rem;*/
+/*    text-align: center;*/
+/*    font-weight: bold;*/
+/*}*/
+
+/*.Input {*/
+/*    width: 20%;*/
+/*    box-shadow: 0px 3px 4px 0px rgba(0, 0, 0, 0.75);*/
+/*}*/
+
+
+/*}*/
+/*.course-material {*/
+/*    display: flex; !* מאפשר שימוש ב-flexbox *!*/
+/*    flex-direction: column; !* מארגן את הילדים בעמודה *!*/
+/*    align-items: center; !* מרכז אופקית *!*/
+/*    justify-content: center; !* מרכז אנכית *!*/
+/*    text-align: center; !* טקסט באמצע *!*/
+/*    margin: 0 auto; !* מוודא ריווח מרכזי *!*/
+/*    font-size: 25px;*/
+/*}*/
+/*button{*/
+/*   width:8vw;*/
+/*    height: 3vh;*/
+/*    font-size: 20px;*/
+/*    background-color: white;*/
+/*    color:rebeccapurple;*/
+/*    border:1px solid rebeccapurple;*/
+/*    margin-top: 20px;*/
+
+/*}*/
+/*bold{*/
+/*    color:rebeccapurple;*/
+/*}*/
