changed UI to "courses" page

--- a/src/pages/Dashboard.css
+++ b/src/pages/Dashboard.css
@@ -105,3 +105,12 @@ button:focus, button:focus-visible {
     display: flex;
     justify-content: space-between;
 }
+.lower-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+
+}
