dashboard changes and some other adjustments ...

--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,12 @@
   flex-direction: column;
 
 }
+
+/*.my-collapse {*/
+/*  overflow: hidden;*/
+/*  transition: height 0.2s ease-in-out;*/
+/*  border-bottom: #ea1c1c 5px;*/
+/*  display: flex;*/
+/*  justify-content: space-between;*/
+
+/*}*/
