--- a/src/Components/Dashboard/NavBar.css
+++ b/src/Components/Dashboard/NavBar.css
@@ -1,5 +1,5 @@
 .navbar{
-    width: 100vw;
+    width: 100%;
     height: 7vh;
 
     display: flex;
@@ -27,17 +27,17 @@
 
 .navbar li:first-child{
     position: absolute;
-    left: 12%;
+    left: 10%;
     float: none;
 }
 .navbar li:nth-child(2){
     position: absolute;
-    left: 16%;
+    left: 18%;
     float: none;
 }
 .navbar li:nth-child(3){
     position: absolute;
-    left: 21%;
+    left: 40%;
     float: none;
 }
 
@@ -93,3 +93,6 @@
     box-shadow: 0 3px 0 0 white;
     outline: none;
 }
+ .upper-container{
+height: 100%;
+ }
