made the navbar responsive, changed the look and feel of "add new course" feature

--- a/src/Components/Dashboard/NavBar.css
+++ b/src/Components/Dashboard/NavBar.css
@@ -1,21 +1,98 @@
-.navbar{
-    width: 100%;
-    height: 7vh;
+.navbar-logo-container{
+    display: flex;
+    align-items: center;
+    height: 100%;
+    cursor: pointer;
+    /*padding: ;*/
+}
+.navbar-logo{
+    margin-inline-start: 8rem;
+    margin-top: 0.5rem;
+    width: 50px;
+    height: 50px;
+    transition: scale 0.3s ease;
 
+}
+.navbar{
+    position: sticky;
+    top: 0;
+    z-index: 999;
+    margin: 0;
+    width: 100vw;
+    height: 7vh;
     display: flex;
     flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-
     color: white;
-    background-color: var(--background-color);;
+    background-color: var(--background-color);
+
+}
+.hamburger-button{
+    display: none;
 }
 
+@media (max-width: 60rem){
+    .navbar-logo-container{
+        width: 100%;
+        transition: width 2s ease;
+        will-change: width;
+        align-items: center !important;
+        justify-content: center !important;
+    }
+    .navbar-logo{
+        margin-inline-start: 0;
+        scale: 1.3;
+    }
+    .hamburger-button{
+        display: block;
+        position: absolute;
+        top: 1.7rem;
+        right: 2rem !important;
+        z-index: 999;
+        color: white;
+        background: transparent;
+        border: none;
+        font-size: x-large;
+        cursor: pointer;
+        /*transform: translateX(100%);*/
+
+    }
+    .navbar ul{
+        position:fixed;
+        width: 50% !important;
+        inset-inline-end: -1rem !important;
+        margin: 0 !important;
+        flex-direction: column !important;
+        justify-content: center !important;
+        align-items: flex-start !important;
+        gap: 45rem !important;
+        background: rgba(102, 51, 153, 0.59);
+        backdrop-filter: blur(10px);
+        border-radius: 10px;
+        border: 3px solid rebeccapurple;
+
+        transform: translateX(100%);
+    }
+    .navbar ul:not(:focus){
+        transform: translateX(100%);
+    }
+    .navbar ul[data-visible='true']{
+        transform: translateX(0%);
+    }
+    .right-buttons, .left-buttons{
+        /*justify-content: flex-start !important;*/
+        align-items: flex-start !important;
+        flex-direction: column;
+
+    }
+    .navbar-button{
+        font-size: 2.5rem !important;
+        gap: 2rem !important;
+    }
+}
 .navbar ul {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     text-align: center;
 
@@ -23,51 +100,18 @@
     font-family: Inter, sans-serif;
     font-weight: bold;
     font-size: 1.5rem;
-}
 
-.navbar li:first-child{
-    position: absolute;
-    left: 10%;
-    float: none;
-}
-.navbar li:nth-child(2){
-    position: absolute;
-    left: 18%;
-    float: none;
-}
-.navbar li:nth-child(3){
-    position: absolute;
-    left: 40%;
-    float: none;
-}
+    height: 100%;
+    width: 100%;
+    margin-top: 0;
+    margin-inline-end: 4rem;
+    gap: 1rem;
 
-.navbar li:last-child{
-    position: absolute;
-    right: 12%;
-    float: left;
-}
-
-.search-bar-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+    transition: transform .3s ease-in-out;
 
 }
-.search-bar{
-    width: 10vw;
-    height: 2vh;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    margin-right: 10px;
-}
-.search-button{
-    color: white;
-    cursor: pointer;
-}
-
 .navbar-button {
+    height: 100%;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -82,17 +126,35 @@
     color: white;
     text-decoration: none;
     cursor: pointer;
-    transition: all 0.4s ease;
+    transition: box-shadow 0.4s ease;
 
 }
 .navbar-button:hover{
-    box-shadow: 0 3px 0 0 white;
+    box-shadow: 0 5px 0 0 white;
 }
 
-.navbar-button:focus{
-    box-shadow: 0 3px 0 0 white;
+.navbar-button[aria-expanded="true"]{
+    box-shadow: 0 5px 0 0 white, 0 15px 6px -7px #b5f0ff;
+    transition: box-shadow 0.3s ease;
     outline: none;
 }
- .upper-container{
-height: 100%;
- }
+.right-buttons{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+}
+.hamburger .line{
+    stroke-dasharray: 61 29 60 1000;
+    transition: 0.7s ease;
+}
+.hamburger .line[data-visible='true']{
+    stroke-dasharray: 60 105 60 300;
+    stroke-dashoffset: -90;
+    translate: 50% -25px;
+    rotate: 0.125turn;
+}
+
+.hamburger {
+    transition: translate 1s, rotate 1s;
+}
