--- a/src/pages/Form.css
+++ b/src/pages/Form.css
@@ -58,12 +58,24 @@
     font-size: 1rem;
     transition: border-color 0.3s;
 }
+.form-input{
+    outline: 3px solid grey;
+}
+.form-input:not(:placeholder-shown):valid{
+    outline: 3px solid #85d5af;
+}
+.form-input:not(:placeholder-shown):invalid{
+    outline: 3px solid #ff9292;
+}
+.form-input:not(:placeholder-shown):invalid:focus{
+    outline: 3px solid #ffe692;
+}
 .input-pair{
     display:flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    gap: 3rem;
+    gap: 2rem;
 
 }
 
@@ -119,7 +131,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    gap: 0.4rem;
+    gap: 0.2rem;
 }
 .have-an-account-button{
     background: transparent;
@@ -135,7 +147,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 3rem;
+    gap: 2rem;
     width: 55%;
     height: 100%;
     border-radius: 16px;
