--- a/src/pages/Course.css
+++ b/src/pages/Course.css
@@ -14,96 +14,23 @@
     align-items: center;
     text-align: center;
     width: 100%;
-    height:15%;
-    font-size:3rem;
+    height:5rem;
+    font-size:2.2rem;
     font-weight:bold;
     color: white;
     background-color: var(--background-color);
 }
-.course-card-container{
-    width: 90%;
-    height: 55%;
-    gap: 2.0rem;
-    margin-top: -6rem;
+.course-page-description{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    align-content: flex-start;
-
-    flex-wrap: wrap;
-    overflow-x: scroll;
-    overflow-y: hidden;
-    white-space: nowrap;
-    scroll-behavior: smooth;
-    flex-grow: 1;
-    /*transition: all 0.2s ease;*/
-    transition: flex 1000ms linear;
-}
-.add-new-form[aria-expanded="true"]{
-    flex-grow: 0.001;
-}
-.course-card-container::-webkit-scrollbar {
-    width: 10px;
-    height: 10px;
-    cursor: pointer;
-}
-.course-card-container::-webkit-scrollbar-track {
-    background: white;
-    margin-block: 2rem;
-    cursor: pointer;
-}
-.course-card-container::-webkit-scrollbar-thumb {
-    background: var(--background-color);
-    border-radius: 10px;
-    cursor: pointer;
-}
-.course-card-container::-webkit-scrollbar-thumb:hover {
-    transform: scale(1.02);
-}
-.course-card{
-    min-width: 400px;
-    min-height: 600px;
-    max-width: 400px;
-    max-height: 600px;
-    margin-inline-start: 1.3rem;
-    margin-inline-end: 1.3rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 4rem;
-    text-align: left;
-    border: 3px solid rebeccapurple;
-    border-radius: 15px;
-    box-shadow: 0 0 3px rebeccapurple;
-    transition: all 0.3s ease;
-    cursor: pointer;
-    white-space: wrap;
-
-
-}
-.course-card:hover{
-    transform: scale(1.01);
-    box-shadow: 0 0 30px rebeccapurple;
-}
-.course-card-content-image{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
     width: 90%;
-    height: 30%;
+    font-size: 1.2rem;
+
 }
-.course-card-content-text{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 1.5rem;
-    width: 90%;
-    height: 50%;
-}
-.add-new-course-container{
+.add-new-form-container{
     width: 100%;
     height: 10%;
 
@@ -113,7 +40,7 @@
     height: 100px;
     position: absolute;
     right: 4%;
-    bottom: 8%;
+    bottom: 3%;
     border-radius: 100%;
 
     background-color: var(--background-color);
@@ -130,15 +57,23 @@
     box-shadow: 0 0 10px rebeccapurple;
 }
 
+.material-page {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 0;
+}
+.course-content{
+    width: 80%;
+    height: 10%;
+    border: 1px solid black;
+    margin: 0.5rem;
+}
+.material-card-container{
 
-.course-material {
-    display: flex; /* מאפשר שימוש ב-flexbox */
-    flex-direction: column; /* מארגן את הילדים בעמודה */
-    align-items: center; /* מרכז אופקית */
-    justify-content: center; /* מרכז אנכית */
-    text-align: center; /* טקסט באמצע */
-    margin: 0 auto; /* מוודא ריווח מרכזי */
-    font-size: 25px;
 }
 .add-material{
     width:8vw;
