--- a/src/pages/Course.css
+++ b/src/pages/Course.css
@@ -3,9 +3,12 @@
     height: 100vh;
     display: flex;
     flex-direction: column;
-    align-items: center;
     text-align: center;
-    gap: 1rem;
+    align-items: center;
+    justify-content: flex-start;
+    font-weight: 600;
+    /*border: 6px solid green;*/
+    /*overflow: hidden;*/
 }
 .course-page-header{
     display: flex;
@@ -62,9 +65,10 @@
     height: 100vh;
     display: flex;
     flex-direction: column;
-    align-items: center;
     text-align: center;
-    gap: 0;
+    align-items: center;
+    justify-content: flex-start;
+    font-weight: 600;
 }
 .course-content{
     width: 80%;
