--- a/src/pages/Dashboard.css
+++ b/src/pages/Dashboard.css
@@ -6,11 +6,12 @@
     align-items: center;
     justify-content: center;
     font-weight: 600;
+
 }
 
 .upper-container {
     width: 100vw;
-    height: 18vh;
+    height: 15vh;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -18,9 +19,17 @@
     text-align: center;
     background: var(--background-color);
     color: white;
+}
+.lower-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: flex-start;
+    width: 100vw;
+    height: 70vh;
 
 }
-
 .search-courses {
     padding: 10px;
     margin-right: 10px;
@@ -61,7 +70,7 @@ button:focus, button:focus-visible {
     min-width: 20%;
     max-height: 60%;
     position: relative;
-    display: inline-flex;
+    display: flex;
     align-items: center;
     justify-content: center;
     align-content: center;
@@ -100,13 +109,4 @@ button:focus, button:focus-visible {
 .search-bar-container {
     display: flex;
     justify-content: space-between;
-}
-.lower-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    /*height: 100%;*/
-
 }
